# cuda-arch-list

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: main.cu
